fix banner alignment

--- a/src/css/modules/about.scss
+++ b/src/css/modules/about.scss
@@ -8,15 +8,19 @@
 }
 
 .about__section {
+    padding-left: 10px;
+    margin-left: 5px;
     width: 324px;
 }
 
 .section__aboutText {
+    margin-left: 5px;
     color: rgb(0, 102, 255);
     letter-spacing: -1px;
 }
 
 .section__aboutDesc {
+    margin-left: 5px;
     width: 300px;
     letter-spacing: -1px;
 }
