--- a/src/css/modules/forening-banner.scss
+++ b/src/css/modules/forening-banner.scss
@@ -10,7 +10,7 @@
 }
 
 .forening-banner__box {
-    margin-left: -35vw;
+    margin-left: -540px;
     margin-top: 50px;
 }
 
